force-app/main/default/objects/My_Resume__c/My_Resume__c.object-meta.xml
<CustomObject>
    <label>My Resume</label>
    <pluralLabel>My Resumes</pluralLabel>
    <nameField>
        <label>Resume Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>