force-app/main/default/objects/My_Resume__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Text</type><length>255</length>
</CustomField>