force-app/main/default/objects/My_Resume__c/fields/Experience_Summary__c.field-meta.xml
<CustomField>
    <fullName>Experience_Summary__c</fullName>
    <label>Experience Summary</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>5</visibleLines>
</CustomField>