force-app/main/default/objects/My_Resume__c/fields/Raw_Resume_Text__c.field-meta.xml
<CustomField>
    <fullName>Raw_Resume_Text__c</fullName>
    <label>Raw Resume Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>