force-app/main/default/objects/My_Resume__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines>
</CustomField>