force-app/main/default/objects/My_Resume__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <type>Number</type><precision>18</precision><scale>0</scale>
</CustomField>